--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,7 +81,7 @@ import Layout from '../layouts/Layout.astro';
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js" defer></script>
 
   <!-- Modal logic -->
-  <script src="/scripts/modal.js" type="module"></script>
+  <script src="/scripts/modal.js" defer></script>
 
   <!-- Carga de datos -->
   <script>
