--- a/public/styles.css
+++ b/public/styles.css
@@ -323,6 +323,8 @@ img {
 
 .modal-content img {
   max-width: 100%;
+  max-height: 250px;
+  object-fit: cover;
   margin-bottom: 1rem;
   border-radius: 8px;
 }
@@ -354,6 +356,13 @@ img {
   border-radius: 4px;
   font-size: 1rem;
   cursor: pointer;
+}
+
+.price-line {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  flex-wrap: wrap;
 }
 
 .close {
