--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,10 +75,10 @@ import Layout from '../layouts/Layout.astro';
   </section>
 
   <footer class="footer">
+    <p>&copy; BIG CORNER. Todos los derechos reservados.</p>
     <p>
       Sitio desarrollado por <a href="https://marketing-bso.netlify.app/" target="_blank" style="color: inherit; text-decoration: underline;">BSO Web Studio</a>
     </p>
-    <p>&copy; <script>document.write(new Date().getFullYear())</script> BIG CORNER. Todos los derechos reservados.</p>
   </footer>
 
   <!-- PapaParse -->
