--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -55,7 +55,7 @@
       <a href="#services">Servicios</a>
       <a href="#about">Sobre Nosotros</a>
       <a href="#contact">Contacto</a>
-      <button id="toggle-theme" title="Cambiar tema">🌙</button>
+      <!-- <button id="toggle-theme" title="Cambiar tema">🌙</button> -->
     </nav>
   </div>
 </header>
