--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,6 +81,10 @@ import Layout from '../layouts/Layout.astro';
     </p>
   </footer>
 
+<script>
+  document.documentElement.classList.add('dark');
+</script>
+
   <!-- PapaParse -->
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js" defer></script>
 
