--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ const { title } = Astro.props;
       <slot />
     </main>
 
-    <script>
+    <!--<script>
       const toggle = document.getElementById('toggle-theme');
       const root = document.documentElement;
 
@@ -45,6 +45,6 @@ const { title } = Astro.props;
         toggle.textContent = isDark ? '☀️' : '🌙';
         localStorage.setItem('theme', isDark ? 'dark' : 'light');
       });
-    </script>
+    </script>-->
   </body>
 </html>
